--- a/HotelManagement/HotelManagement/Views/InvoiceView.xaml
+++ b/HotelManagement/HotelManagement/Views/InvoiceView.xaml
@@ -6,7 +6,8 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
              xmlns:local="clr-namespace:HotelManagement.Views"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" FontSize="14"
+             FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              d:DesignHeight="600" d:DesignWidth="1000">
     <UserControl.DataContext>
         <viewModels:InvoiceViewModel/>
@@ -22,21 +23,15 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <!-- Header Column 0-->
+            <!-- Header + Searchbar-->
             <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Invoices" FontSize="24" FontWeight="Bold" 
-                                 HorizontalAlignment="Stretch" Margin="8 8 0 8" Foreground="{StaticResource PrimaryHueDarkBrush}" VerticalAlignment="Center"/>
-                <Border Grid.Column="1" BorderBrush="{StaticResource PrimaryHueDarkBrush}" BorderThickness="0.3" Margin="15 10 5 10" MaxWidth="700" HorizontalAlignment="Stretch" CornerRadius="3">
+                <Border BorderBrush="{StaticResource PrimaryHueDarkBrush}" BorderThickness="0.3" Margin="15 5 5 10" MaxWidth="700" HorizontalAlignment="Stretch" CornerRadius="3" >
                     <Grid>
                         <Grid.Resources>
                             <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="Transparent"/>
                         </Grid.Resources>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width=".3*"/>
+                            <ColumnDefinition Width=".4*"/>
                             <ColumnDefinition Width="auto"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width=".2*"/>
@@ -49,7 +44,7 @@
                         </ComboBox>
                         <Separator Grid.Column="1" Background="{StaticResource PrimaryHueDarkBrush}" Margin="1 0 1 0"/>
                         <TextBox Grid.Column="2" Margin="5 0" Name="tbSearch" CaretBrush="Black"
-                                        VerticalContentAlignment="Center" FontSize="16"
+                                        VerticalContentAlignment="Center"
                                         Text="{Binding ContentSearch,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                         materialDesign:HintAssist.Hint="Type something..." 
                                         BorderBrush="Transparent">
@@ -66,6 +61,95 @@
                 </Border>
             </Grid>
         </Grid>
+        <!-- Separator -->
         <Border Grid.Column="1" Background="Black"/>
+        <!-- Invoice Detail -->
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Column="0" Text="Invoice Detail" FontSize="24" FontWeight="Bold" 
+                    HorizontalAlignment="Stretch" Margin="6 4 4 2" Foreground="{StaticResource PrimaryHueDarkBrush}" VerticalAlignment="Center"/>
+            <Grid Grid.Row="1" Margin="8 4 0 10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" Orientation="Horizontal">
+                    <TextBlock Text="Arrival: " FontWeight="Bold"/>
+                    <TextBlock Text="21/10/2021"/>
+                </StackPanel>
+                <StackPanel Grid.Column="1" Orientation="Horizontal">
+                    <TextBlock Text="Departure: " FontWeight="Bold"/>
+                    <TextBlock Text="27/10/2021"/>
+                </StackPanel>
+            </Grid>
+            <!-- Main Guest -->
+            <Grid Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Text="Main Guest:" FontSize="18" FontWeight="Bold" 
+                    Margin="6 8 8 4" Foreground="{StaticResource PrimaryHueDarkBrush}" 
+                    HorizontalAlignment="Stretch"  VerticalAlignment="Center"/>
+                <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Stretch" Margin="0 2 0 10">
+                    <StackPanel Orientation="Horizontal" Margin="8 2 2 2">
+                        <TextBlock Text="ID Card:" Width="80" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <TextBlock Text="2654722222" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="8 2 2 2">
+                        <TextBlock Text="Name:" Width="80" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <TextBlock Text="Quan Công" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="8 2 2 2">
+                        <TextBlock Text="Phone:" Width="80" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <TextBlock Text="0123456789" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="8 2 2 2">
+                        <TextBlock Text="Email:" Width="80" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <TextBlock Text="quancong3q@gmail.com" 
+                                HorizontalAlignment="Stretch" VerticalAlignment="Center" TextTrimming="WordEllipsis"/>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+            <!-- List Room -->
+            <Grid Grid.Row="3">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="List Room:" FontSize="18" FontWeight="Bold" 
+                        Margin="6 0 0 0" Foreground="{StaticResource PrimaryHueDarkBrush}" 
+                        HorizontalAlignment="Stretch"  VerticalAlignment="Center"/>
+                    <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="8"
+                        VerticalAlignment="Center" HorizontalAlignment="Right">
+                        <TextBlock Text="Count: " FontWeight="Bold"/>
+                        <TextBlock Text="0"/>
+                    </StackPanel>
+                </Grid>
+                
+            </Grid>
+            <!-- List Service -->
+            <Grid Grid.Row="4">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Text="List Service:" FontSize="18" FontWeight="Bold" 
+                    Margin="8 8 8 4" Foreground="{StaticResource PrimaryHueDarkBrush}" 
+                    HorizontalAlignment="Stretch"  VerticalAlignment="Center"/>
+            </Grid>
+        </Grid>
     </Grid>
 </UserControl>
