--- a/HotelManagement/HotelManagement/Views/Reservation/ReservationDetailsWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/ReservationDetailsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HotelManagement.Views.NewReservationWindow"
+﻿<Window x:Class="HotelManagement.Views.ReservationDetailsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,15 +7,11 @@
         xmlns:local="clr-namespace:HotelManagement.Views"
         xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
         mc:Ignorable="d"
-        Name="windowNewReservation"
+        Name="windowReservationDetails"
         Background="WhiteSmoke"
         SizeToContent="WidthAndHeight"
         ResizeMode="NoResize"
-        Title="Walk In / New Reservation">
-    <Window.DataContext>
-        <viewModels:NewReservationViewModel/>
-    </Window.DataContext>
-
+        Title="Reservation Details">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -261,39 +257,28 @@
                     BorderBrush="LightGray" BorderThickness="1.5">
                         <StackPanel>
                             <Grid Margin="0,0,0,5">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+                                
                                 <TextBlock Margin="5" Text="Booked Room" FontSize="18"/>
+
+                                <Button Grid.Column="2" Command="{Binding AddRoomCommand}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <materialDesign:PackIcon Kind="Add" VerticalAlignment="Center"/>
+                                        <TextBlock Text="Add Room"/>
+                                    </StackPanel>
+                                </Button>
                             </Grid>
 
                             <DataGrid Height="200"
-                                ItemsSource="{Binding AvailableRooms}"
+                                ItemsSource="{Binding BookedRooms}"
                                 CanUserResizeColumns="False" CanUserDeleteRows="True"
                                 CanUserAddRows="False" IsReadOnly="False"
                                 AutoGenerateColumns="False" HeadersVisibility="All">
-                                <DataGrid.Resources>
-                                    <viewModels:BindingProxy
-                                        x:Key="DataContextProxy"
-                                        Data="{Binding}" />
-                                </DataGrid.Resources>
-                                
                                 <DataGrid.Columns>
-                                    <DataGridCheckBoxColumn
-                                        Binding="{Binding IsSelected, UpdateSourceTrigger=PropertyChanged}" 
-                                        ElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnStyle}"
-                                        EditingElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnEditingStyle}">
-                                        <DataGridCheckBoxColumn.Header>
-                                            <Border Background="Transparent">
-                                                <CheckBox
-                                                    IsChecked="{Binding Data.IsAllRoomsSelected, Source={StaticResource DataContextProxy}}"/>
-                                            </Border>
-                                        </DataGridCheckBoxColumn.Header>
-
-                                        <DataGridCheckBoxColumn.HeaderStyle>
-                                            <Style TargetType="{x:Type DataGridColumnHeader}" BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}">
-                                                <Setter Property="HorizontalContentAlignment" Value="Center" />
-                                            </Style>
-                                        </DataGridCheckBoxColumn.HeaderStyle>
-                                    </DataGridCheckBoxColumn>
-                                    
                                     <DataGridTextColumn
                                         Header="Room Name" Binding="{Binding RoomName}" 
                                         IsReadOnly="True">  
@@ -353,6 +338,34 @@
                                             </Style>
                                         </DataGridTextColumn.ElementStyle>
                                     </DataGridTextColumn>
+
+                                    <DataGridTemplateColumn>
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button 
+                                                    Padding="0" Width="32"
+                                                    Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.ShowFolioCommand}"
+                                                    CommandParameter="{Binding}">
+                                                    <materialDesign:PackIcon Kind="RoomService"/>
+                                                </Button>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
+                                    
+                                    <DataGridTemplateColumn>
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button 
+                                                    Padding="0" Width="32"
+                                                    Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.RemoveRoomCommand}"
+                                                    CommandParameter="{Binding}"
+                                                    Style="{StaticResource MaterialDesignOutlinedButton}"
+                                                    BorderThickness="1.5">
+                                                    <materialDesign:PackIcon Kind="Remove" Foreground="{StaticResource PrimaryHueMidBrush}"/>
+                                                </Button>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
                                 </DataGrid.Columns>
 
                                 <DataGrid.CellStyle>
@@ -389,8 +402,7 @@
                                 </Button>
                             </Grid>
 
-                            <DataGrid 
-                                Height="200"
+                            <DataGrid Height="200"
                                 ItemsSource="{Binding Sharers}"
                                 CanUserResizeColumns="False" 
                                 CanUserAddRows="False"
@@ -529,11 +541,11 @@
                     <StackPanel Grid.Column="2" Orientation="Horizontal">
                         <Button 
                             Content="Reserve" Command="{Binding ReserveCommand}"
-                            CommandParameter="{Binding ElementName=windowNewReservation}"/>
+                            CommandParameter="{Binding ElementName=windowReservationDetails}"/>
                         
                         <Button 
                             Command="{Binding CancelCommand}"
-                            CommandParameter="{Binding ElementName=windowNewReservation}"
+                            CommandParameter="{Binding ElementName=windowReservationDetails}"
                             Margin="15,0,0,0" Content="Cancel" BorderThickness="1.5"
                             Style="{StaticResource MaterialDesignOutlinedButton}"/>
                     </StackPanel>
